INFRA-1637 fix tests to work on all platforms